<resources>
    <string name="app_name">SmartCat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_image">Save Image</string>
    <string name="hello">Hello</string>
    <string name="add_shelf">Add Shelf</string>
    <string name="ok">OK</string>
    <string name="camera">Camera</string>
    <string name="add_product">Add Product</string>
    <string name="add_product_info">Add Products</string>
    <string name="product">Product</string>
    <string name="add_property">Add Product Details</string>
    <string name="shelf_images">Shelf Images</string>
    <string name="product_images">Product Images</string>

    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="barcode">Barcode</string>
    <string name="other">Other</string>
    <string name="upload">Upload</string>
    <string name="title">Select Details</string>
    <string name="settings">Settings</string>
    <string name="uploadStatus">Upload Status</string>
    <string name="emaild">Email ID</string>
    <string name="enter_email">Please enter your email id</string>
    <string name="compression">Compression</string>
    <string name="none">None</string>
    <string name="medium">Medium</string>
    <string name="save">Save</string>
    <string name="prefs_saved">Your information have been updated</string>
    <string name="jobSaved">Your job have been queued successfully.</string>
    <string name="retry_on_error">Some error occured Please Re-try!</string>
    <string name="save_continue">Save &amp; Continue</string>

    <string name="blankProduct">Please add product information!</string>
    <string name="regex_input">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>
</resources>