<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/backButtonSettings"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/dp_10"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/arrow_back_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:layout_gravity="end|center_vertical"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/settings" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="right|center_vertical">

            <TextView
                android:id="@+id/clearBtn"
                android:layout_marginLeft="@dimen/dp_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:layout_gravity="center_vertical"
                android:gravity="right|center_vertical"
                android:layout_marginRight="@dimen/dp_24"
                android:visibility="gone"
                android:text="Clear Done" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llJobList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rect_bottom"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emaild"
                android:fontFamily="@font/roboto_medium"
                />
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/roboto_medium"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compression"
                android:fontFamily="@font/roboto_medium"
                />
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/noneRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:buttonTint="@color/dashboard_green"
                    android:text="@string/none"/>

                <RadioButton
                    android:id="@+id/mediumRadioBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:buttonTint="@color/dashboard_green"
                    android:fontFamily="@font/roboto_medium"
                    android:checked="true"
                    android:text="@string/medium"/>
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btnSaveSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_20"
            android:visibility="gone"
            android:backgroundTint="@color/dashboard_green"
            android:text="@string/save"/>
     </LinearLayout>
</LinearLayout>